# flowdesk

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/cases/: admin.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/cases/migrations/: 0001_initial.py  0002_remove_case_department_case_closed_at_case_is_active_and_more.py  0003_casecomment.py  0004_caseattachment.py  0005_activitylog.py
backend/apps/core/: services.py  urls.py  views.py
backend/apps/organizations/: admin.py  models.py
backend/apps/organizations/migrations/: 0001_initial.py  0002_department.py
backend/common/: models.py
backend/common/management/commands/: seed_data.py
backend/common/seeders/: cases.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py
infra/compose/: docker-compose.dev.yml
