[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.16",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipython>=8.39.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]
